# docker-poetry-django-toml

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.example.yml  env.txt.example  pyproject.toml  uwsgi.ini
dependencies/: apt-requirements.txt
nginx/: nginx-proxy.conf.example
project/: Dockerfile  entrypoint.sh
project/dependencies/: requirements.txt
project/project/: urls.py
project/project/settings/: base.py
project/project/utils/: models.py
project/settings/: base.py  development.py
project/users/: apps.py  constants.py  managers.py  models.py  permissions.py  profiles.py  response.py  serializers.py  services.py  signals.py  viewsets.py
