[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = ""
authors = ["youngminds"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
django = "^5.1.3"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-cors-headers = "^4.6.0"
uwsgi = "^2.0.28"


[build-system]
requires = ["poetry-core"]
package-mode = false
build-backend = "poetry.core.masonry.api"
